maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:46: error: forward reference extends over definition of variable ind
    ind = getIndication(x,y)
    ^